# particles

./: CMakeLists.txt  Makefile  README.md  main.cpp  particle.cpp  pconfig.cpp  pconfig.hpp  simulation.cpp  simulation.hpp
configs/: 1000p  billiards  brownian  diagonal  pendulum  squeeze  wallbouncing
src/: event.hpp  main.cpp  particle.hpp  pconfig.cpp  pconfig.hpp
